@startuml
'https://plantuml.com/class-diagram

class FireBaseFirestore
{
    +CollectionReference collection(String)
    +DocumentReference document(String)
}

package Ingredient #DDD
{
    class Ingredient
    {
        -String description
        -Date bestBeforeDate
        -String location
        -int count
        -String unit
        -String category

        -String formattedBestBeforeDate()
    }
    package IngredientFragment #AFA
    {
        class ActivityResultLauncher
        {
            +void onActivityResult(ActivityResult)
        }
        class CalendarActivity
        {
            - String date
            * void onCreate(Bundle savedInstanceState)
            - void done()
        }
        class IngredientFragment
        {
            -EditText ingredientDescription;
            -EditText ingredientLocation;
            -EditText ingredientBestBeforeDate;
            -EditText ingredientCount;
            -EditText ingredientUnit;
            -EditText ingredientCategory;
            -OnFragmentInteractionListener listener;
            -FireBaseFirestore db
            -ActivityResultLauncher<Intent> calendarActivity

            - Date calendarDate
            - {static} String triggerFlag

            + {static} void onAttach(@NonNull Context)
            + {static} IngredientFragment NewInstance(Ingredient)
            + Dialog onCreateDialog(@Nullable Bundle)
            - void setDate(String)
            + int parseCount(String count)
            - boolean emptyStringCheck(String, String, String, String, String, String)

            + {static}void addIngredientDB(Ingredient, CollectionReference)
            + {static}void delIngredientDB(String, CollectionReference)
            + {static}void editIngredientDB(String, Ingredient, CollectionReference)
        }
    }
    package IngredientActivity #AFA
    {
        interface Ingredient.OnFragmentInteractionListener
        {
            +void onOkPressed(Ingredient newIngredient);
            +void onOkPressedEdit(Ingredient newIngredient);
        }
        class CustomIngredientArrayAdapter
        {
            - ArrayList<Ingredient> ingredients
            - Context context
            - FireBaseFirestore db

            + View getView(int, @Nullable View, @NonNull ViewGroup)
        }
        class IngredientActivity implements Ingredient.OnFragmentInteractionListener
        {
            -ListView ingredientList
            -ArrayAdapter<Ingredient> ingredientAdapter
            -ArrayList<Ingredient> dataList
            -int selected
            -FireBaseFirestore db
            -final String[] sortValues = { "description", "best before date", "location", "category" }

            *void onCreate(Bundle)
            +void onOkPressed(Ingredient)
            +void onOkPressedEdit(Ingredient)
        }

    }
    Serializable ()- Ingredient : Implements

    IngredientActivity  o--   "0..*" Ingredient
    IngredientFragment  o--   "0..*" Ingredient
    CustomIngredientArrayAdapter --o IngredientActivity

    FireBaseFirestore --o "0..*" IngredientActivity
    FireBaseFirestore --o "0..*" CustomIngredientArrayAdapter
    FireBaseFirestore --o "0..*" IngredientFragment

    Ingredient.OnFragmentInteractionListener <-* IngredientFragment
    IngredientActivity <-> IngredientFragment
    CalendarActivity <-> ActivityResultLauncher
    ActivityResultLauncher <--o "1" IngredientFragment
}
@enduml